force-app/main/default/objects/Account/fields/Bundled_Field__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Field__c</fullName>
    <label>Bundled Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>