force-app/main/default/objects/Account/fields/Premier_Customer__c.field-meta.xml
<CustomField>
    <fullName>Premier_Customer__c</fullName>
    <label>Premier Customer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>