force-app/main/default/objects/Account/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample</label>
    <type>Checkbox</type>
</CustomField>