force-app/main/default/objects/Account/recordTypes/Harsha.recordType-meta.xml
<RecordType>
    <fullName>Harsha</fullName>
    <active>true</active>
    <label>Harsha</label>
</RecordType>